--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,8 @@ $color-primary: #cc0000;
 $color-dark-1: #0c0c0c;
 $color-dark-2: #1A1A1A;
 
+$color-white: #ffffff;
+
 $background-color: #FEFEFE;
 
 $color-grey-header: #262626;
@@ -37,4 +39,12 @@ body{
     line-height: 2rem;
 }
 
+.container{
+    display: grid;
+
+    grid-template-rows: min-content min-content min-content repeat(5, 40rem);
+    grid-template-columns: [full-start] 1fr  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
+    [center-end]  1fr [full-end];
+    grid-row-gap: 1rem;
+}
 
