--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -42,9 +42,9 @@ body{
 .container{
     display: grid;
 
-    grid-template-rows: min-content min-content min-content repeat(5, 40rem);
-    grid-template-columns: [full-start] 1fr  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
-    [center-end]  1fr [full-end];
+    grid-template-rows: repeat(8, min-content) repeat(1, 40rem);
+    grid-template-columns: [full-start] minmax(2rem, 1fr)  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
+    [center-end]  minmax(2rem, 1fr) [full-end];
     grid-row-gap: 1rem;
 }
 
