--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -5,6 +5,11 @@
 
     }
 
+    &__header{
+        background-color: $color-grey-3;
+        padding: .5rem;
+    }
+
     &__photo{
         width: 100%;
     }
@@ -17,7 +22,7 @@
         padding-top: .4rem;
         border-top: 1px solid $color-grey-3;
         margin-bottom: .8rem;
-        display: flex;
+        // display: flex;
         align-items: center;
 
         & span{
@@ -28,8 +33,30 @@
     &__icon{
         height: 1.7rem;
         width: 1.7rem;
-        fill: $color-grey-3;
+        fill: $color-grey-text;
         margin-left: .6rem;
+    }
+
+    &__news-video{
+        border-top: 1px solid $color-grey-3;;
+        display: flex;
+        align-items: start;
+
+        &:not(:first-child){
+            margin-top: .5rem;
+        }
+    }
+
+    &__video-img{
+        width: 25%;
+        height: 7rem;
+    }
+
+    &__video-text{
+        margin-top: 1rem;
+        margin-left: 1rem;
+        font-size: 1.5rem;
+        font-weight: 300;
     }
 }
 
@@ -43,4 +70,37 @@
     width: max-content;
     position: absolute;
     bottom: .5rem;
+}
+
+.section-header{
+    display: flex;
+    align-items: center;
+
+    &__line{
+        // align-self: ;
+        padding: 1px 0;
+        width: 55vw;
+        border-top: 4px solid $color-grey-3;
+        border-bottom: 4px solid $color-grey-3;
+    }
+}
+
+.transparent{
+    display: flex;
+    position: absolute;
+    bottom: .5rem;
+    padding: .5rem;
+    background-color: rgba($color: #000000, $alpha: .35);
+
+    &__icon{
+        height: 2rem;
+        width: 2rem;
+        margin-right: .5rem;
+        fill: $color-white;
+    }
+
+    &__text{
+        font-size: 1.3rem;
+        color: $color-white;
+    }
 }
