--- a/sass/_news-and-buzz.scss
+++ b/sass/_news-and-buzz.scss
@@ -1,6 +1,10 @@
-.newsbuzz{
-    background-color: peachpuff;
-
+.newsbuzz{    
+    margin-top: 2rem;
     grid-row: 4 / 5;
     grid-column: center-start / center-end;
+
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 2rem;
 }
