--- a/sass/_photos.scss
+++ b/sass/_photos.scss
@@ -1,6 +1,24 @@
 .photos{
-    background-color: yellowgreen;
-
-    grid-row: 7 / 8;
+    grid-row: 8 / 9;
     grid-column: center-start / center-end;
+
+    display: grid;
+    grid-template-rows: repeat(2, min-content);
+    grid-row-gap: 2.5rem;
+
+    &__header{
+        
+    }
+
+    &__content{
+        display: grid;
+        grid-template-columns: 2.5fr 1fr;
+        grid-column-gap: 2rem;
+
+        &-pictures{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
+            grid-column-gap: 3.5rem;
+        }
+    }
 }
