--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -24,6 +24,13 @@
     }
 }
 
+.heading-3{
+    font-size: 2.4rem;
+    font-weight: 300;
+    line-height: 3rem;
+    margin-right: 1rem;
+}
+
 .heading-4{
     font-size: 1.5rem;
     line-height: 1.9rem;
