--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 
 @import "./main-section";
 @import "./news-and-buzz";
+@import "./look-section";
 @import "./featured";
 @import "./watch-it";
 @import "./photos";
