--- a/sass/_main-section.scss
+++ b/sass/_main-section.scss
@@ -5,6 +5,20 @@
     display: grid;
     grid-template-columns: minmax(min-content, 1.5fr)  repeat(2, minmax(min-content, 1fr));
     grid-column-gap: 2rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        grid-template-columns: repeat(2, minmax(min-content, 1fr));
+    }
+
+    @media only screen and (max-width: $bp-phone) {
+        grid-template-columns: 1fr;
+    }
+
+    &__section1{
+        @media only screen and (max-width: $bp-largest) {
+            grid-column: 1 / -1;            
+        }
+    }
 }
 
 .e-ul{
