--- a/sass/_news-and-buzz.scss
+++ b/sass/_news-and-buzz.scss
@@ -7,4 +7,16 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 2rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media only screen and (max-width: $bp-phone) {
+        grid-template-columns: 1fr;
+    }
+
+    @media only screen and (max-width: $bp-phone) {
+                  
+    }
 }
