--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -82,6 +82,9 @@
         width: 55vw;
         border-top: 4px solid $color-grey-3;
         border-bottom: 4px solid $color-grey-3;
+        @media only screen and (max-width: $bp-largest) {
+            width: 70vw;
+        }
     }
 }
 
