--- a/sass/_featured.scss
+++ b/sass/_featured.scss
@@ -8,6 +8,14 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
 
+    @media only screen and (max-width: $bp-largest) {
+       grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media only screen and (max-width: $bp-phone) {
+        grid-template-columns: 1fr;
+    }
+
     &__header{
         grid-column: 1 / -1;
     }
