--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -21,6 +21,11 @@
             padding: 1.2rem .5rem;
             border-radius: 3px;
             border: none;
+
+            @media only screen and (max-width: $bp-largest) {
+                width: 70%;                
+                margin: 0 auto;
+            }
         }
 
         &-input::placeholder{
@@ -32,6 +37,10 @@
             margin-left: -9rem;
             display: flex;
             align-items: center;
+
+            @media only screen and (max-width: $bp-largest) {
+                display: none;              
+            }
 
             & span{
                 font-weight: 700;
@@ -52,6 +61,12 @@
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
         grid-row-gap: 3rem;
+        
+
+        @media only screen and (max-width: $bp-largest) {
+            display: flex;              
+            flex-direction: column;
+        }
 
         &-list{
             list-style-type: none;
@@ -61,11 +76,16 @@
                 font-size: 2rem;
                 font-weight: 700;
                 margin-bottom: 1rem;
+                text-align: center;
             }
 
             &-item{
                 font-size: 1.2rem;
                 font-weight: 700;
+
+                @media only screen and (max-width: $bp-largest) {
+                    display: none;         
+                }
             }
         }
     }
@@ -77,8 +97,21 @@
 
         display: flex;
 
+        @media only screen and (max-width: $bp-largest) {
+            border-bottom: none;              
+            flex-direction: column;
+            text-align: center;
+            width: max-content;
+            margin: 0 auto;
+        }
+
         &-logo{
             margin-right: auto;
+
+            @media only screen and (max-width: $bp-largest) {
+                margin: 0 auto;
+                margin-bottom: 1rem;
+            }
 
             & img{
                 height: 2.5rem;
@@ -88,6 +121,8 @@
         &-wrapper{
             display: flex;
             align-items: center;
+
+            
 
             & p{
                 color: $color-white;
@@ -111,6 +146,10 @@
     &__nav2{
         grid-column: center-start / center-end;
 
+        @media only screen and (max-width: $bp-largest) {
+            text-align: center;            
+        }
+
         &-list{
             list-style-type: none;
             display: flex;
@@ -129,6 +168,10 @@
 
     &__copyright{
         grid-column: center-start / center-end;
+
+        @media only screen and (max-width: $bp-largest) {
+            text-align: center;              
+        }
 
         & p{
             font-size: 1.4rem;
