--- a/sass/_look-section.scss
+++ b/sass/_look-section.scss
@@ -6,16 +6,54 @@
     display: grid;
     grid-template-columns: 1fr 1.5fr 1fr;
     grid-column-gap: 2rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 2rem;
+    }
+
+    @media only screen and (max-width: $bp-phone) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .closer{
     grid-column: 1 / 2;
+
+    @media only screen and (max-width: $bp-largest) {
+        grid-row:  2 / 3;
+        grid-column: 1 / 2;
+    }
+
+    @media only screen and (max-width: $bp-phone) {
+        grid-column: 1 / -1;
+        grid-row:  2 / 3;
+    }
 }
 
 .feature{
     grid-column: 2 / 3;
+
+    @media only screen and (max-width: $bp-largest) {
+        grid-row:  1 / 2;
+        grid-column: 1 / -1;
+    }
+
+    @media only screen and (max-width: $bp-phone) {
+        grid-column: 1 / -1;
+    }
 }
 
 .break{
     grid-column: 3 / 4;
+
+    @media only screen and (max-width: $bp-largest) {
+        grid-row:  2 / 3;
+        grid-column: 2 / -1;
+    }
+
+    @media only screen and (max-width: $bp-phone) {
+        grid-column: 1 / -1;
+        grid-row:  3 / 4;
+    }
 }
