--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
     background-color: $color-dark-1;
     padding: 5rem 0;
+    min-height: 100vh;
     
     grid-column: full-start / full-end;
     grid-row: 9 / 10;
@@ -76,7 +77,11 @@
                 font-size: 2rem;
                 font-weight: 700;
                 margin-bottom: 1rem;
-                text-align: center;
+                text-align: left;
+
+                @media only screen and (max-width: $bp-largest) {
+                    text-align: center;         
+                }
             }
 
             &-item{
