--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -52,6 +52,7 @@ body{
 
 .container{
     display: grid;
+    position: relative;
 
     grid-template-rows: repeat(9, min-content); 
     grid-template-columns: [full-start] minmax(2rem, 1fr)  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
