--- a/sass/_main-section.scss
+++ b/sass/_main-section.scss
@@ -19,6 +19,9 @@
             grid-column: 1 / -1;            
         }
     }
+    @media only screen and (max-width: $bp-largest) {
+        margin-top: 4rem;
+    }
 }
 
 .e-ul{
