--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -42,6 +42,10 @@ html{
     font-size: 62.5%;       // 10 / 16 = 62.5;
 }
 
+*{
+    border: 1px solid red;
+}
+
 body{
     font-family: $font-primary;
     background-color: $background-color;
