--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,13 +5,13 @@
     grid-column: full-start / full-end;
     padding: .7rem 0;
     position: fixed;
-    width: 99.1%;
+    width: 100%;
     z-index: 9999999;
 }
 
 .top-nav{
     display: flex;
-    max-width: 124.6rem;
+    max-width: 80%;
     margin: 0 auto;
 
     &__list{
