--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,12 @@ body {
   grid-template-columns: [full-start] minmax(2rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) [center-end] minmax(2rem, 1fr) [full-end];
   grid-row-gap: 1rem;
 }
+@media only screen and (max-width: 60em) {
+  .container {
+    grid-template-columns: [full-start] minmax(6px, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) [center-end] minmax(6px, 1fr) [full-end];
+    grid-row-gap: 1rem;
+  }
+}
 
 .header {
   background-color: #0c0c0c;
