--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -64,5 +64,11 @@ body{
     grid-template-columns: [full-start] minmax(2rem, 1fr)  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
     [center-end]  minmax(2rem, 1fr) [full-end];
     grid-row-gap: 1rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        grid-template-columns: [full-start] minmax(6px, 1fr)  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
+        [center-end]  minmax(6px, 1fr) [full-end];
+        grid-row-gap: 1rem;     
+    }
 }
 
