--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 @media only screen and (max-width: 60em) {
   .container {
-    grid-template-columns: [full-start] minmax(2px, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) [center-end] minmax(2px, 1fr) [full-end];
+    grid-template-columns: [full-start] 1fr [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) [center-end] 1fr [full-end];
     grid-row-gap: 1rem;
   }
 }
