--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -72,8 +72,8 @@ body{
     }
 
     @media only screen and (max-width: $bp-largest) {
-        grid-template-columns: [full-start] minmax(2px, 1fr)  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
-        [center-end]  minmax(2px, 1fr) [full-end];
+        grid-template-columns: [full-start] 1fr  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
+        [center-end]  1fr [full-end];
         grid-row-gap: 1rem;     
     }
 }
