--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -60,7 +60,6 @@ body{
     grid-template-columns: [full-start] minmax(2rem, 1fr)  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
     [center-end]  minmax(2rem, 1fr) [full-end];
     grid-row-gap: 1rem;
-    padding: 0 4px;
 
     @media only screen and (max-width: $bp-largest) {
         grid-template-columns: [full-start] minmax(6px, 1fr)  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
@@ -68,7 +67,7 @@ body{
         grid-row-gap: 1rem;     
     }
 
-    @media only screen and (max-width: $bp-largest) {
+    @media only screen and (max-width: $bp-phone) {
         grid-template-columns: [full-start] 1fr  [center-start] repeat(8, [col-start] minmax(min-content, 13.75rem) [col-end]) 
         [center-end]  1fr [full-end];
         grid-row-gap: 1rem;     
